# pi_checker

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
pi_checker/: commands.py  results.py  runners.py
shatoon/: commands.py  results.py  runners.py
tests/: test_commands.py  test_results.py
tests/data_factory/: result.py
web/: main.py  routes.py  settings.py  views.py
web/templates/: base.html  index.html  settings.html
