[project]
name = "shatoon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dkurchigin", email = "kurchigin.dmitry@yandex.ru"},
]
dependencies = [
    "pydantic>=2.7.4",
    "aiohttp>=3.9.5",
    "pydantic-settings>=2.3.4",
    "aiohttp-jinja2>=1.6",
    "ruff>=0.5.2",
    "pre-commit>=3.7.1",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff]
line-length = 120


[tool.ruff.lint]
extend-select = ['F', 'I', 'N', 'T', 'RUF']
